test/e2e/fail/007-undefined-type/expected.stderr
error[E0007]: undefined type
 --> $FILE:1:1
  |
1 | let x: Foo = 3;
  | ^^^^^^^^^^^^^^^ type `Foo` is not defined
  |
